# watchdock-errors-python-sdk

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/watchdock_errors/: __init__.py  client.py  config.py  event.py  utils.py
src/watchdock_errors/integrations/: django.py  fastapi.py
tests/: test_client.py  test_event.py
