[tool.poetry]
name = "watchdock-errors"
version = "0.1.2"
description = "Application error tracking SDK for the Watchdock platform"
readme = "README.md"
license = "MIT"
authors = ["Watchdock Team"]
keywords = ["error-tracking", "observability", "watchdock"]
packages = [{ include = "watchdock_errors", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.28"

[tool.poetry.group.django]
optional = true

[tool.poetry.group.django.dependencies]
django = ">=3.2"

[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.fastapi.dependencies]
fastapi = ">=0.95"
starlette = ">=0.27"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-mock = ">=3.0"
responses = ">=0.23"
ruff = ">=0.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "pep440"

[tool.poetry.build]
script = "build.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning>=1.2.0"]
build-backend = "poetry.core.masonry.api"
