[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdock-errors"
dynamic = ["version"]
description = "Application error tracking SDK for the Watchdock platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["error-tracking", "observability", "watchdock"]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
django = ["django>=3.2"]
fastapi = ["fastapi>=0.95", "starlette>=0.27"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
